# edtronaut-ai-coworker

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  response.json  token.json
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  seed_npcs.py
backend/app/: main.py
backend/app/agents/: director_agent.py  npc_agent.py  state.py
backend/app/agents/personas/: base.py  (+3 more)
backend/app/api/: deps.py  routes_director.py  routes_health.py  routes_npc.py
backend/app/core/: config.py  security.py
backend/app/data/: loader.py  vector_store.py
backend/app/domain/: models.py  ports.py
backend/app/models/: embedding_client.py  inference.py  llm_client.py
backend/app/services/: chat_service.py  session_manager.py
backend/app/utils/: helpers.py  logger.py  tracing.py
backend/configs/: default.yml  logging.yml  npc_gucci.yml
backend/migrations/: env.py
backend/migrations/versions/: 20260215_0001_initial_schema.py
backend/protos/: coworker.proto
backend/scripts/: generate_protos.py  seed_rag.py
backend/src/coworker_api/: __init__.py  config.py
backend/tests/: conftest.py  test_api.py  test_chat_service.py  test_composite_store.py  test_coworker_api.py  test_director_agent.py  test_director_service.py  test_evaluation_service.py  test_helpers.py  test_ingest_documents_service.py  test_npc_agent.py  test_provider_factory.py  test_rag_pipeline.py  test_reset_memory_service.py  test_rest_auth.py  test_retriever.py  test_session_manager.py  test_session_manager_full.py  test_tools.py  test_vector_store.py
(+134 files in other folders)
